--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="..//caifu/css/bootstrap.css">
-    <script src="../caifu/bootstrap-4.1.3/"></script>
+    <script src=""></script>
 </head>
 <body>
-    
+    <!-- 顶部通栏 -->
+    <header class="heima_topBar">
+
+    </header>
+    <!-- 导航栏 -->
+    <nav class="navbar heima_nav">
+
+    </nav>
+    <!-- 轮播图 -->
+    <div class="heima_banner">
+
+    </div>
+    <!-- 信息模块 -->
+    <div class="heima_info">
+
+    </div>
+    <!-- 预约 -->
+    <div class="heima_book">
+
+    </div>
 
 </body>
 </html>
