--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active" >
-                <img class="d-block w-100" src="https://img02.sogoucdn.com/app/a/100520093/18b802f0eb835f7e-f90693c95e6a93be-c5ff88da9ec2f2faf772a07b8a56687d.jpg" alt="First slide">
+                <img class="d-block w-100" src="https://shuju1-123.oss-cn-beijing.aliyuncs.com/heimadai/data/new_Lunbo/2018-10/31/20181031100327_45007.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="https://img04.sogoucdn.com/app/a/100520093/12400ee0679b6e1e-f0b91d6f9753a2cf-9fb4d606d750ecb83231b016ed7b5fd3.jpg" alt="Second slide">
+                <img class="d-block w-100" src="https://shuju1-123.oss-cn-beijing.aliyuncs.com/heimadai/data/new_Lunbo/2018-11/01/20181101025954_68413.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="https://img01.sogoucdn.com/app/a/100520093/3c28af542f2d49f7-da1566425074a021-4dd500a08535394bc4c64c68f672a2d6.jpg" alt="Third slide">
+                <img class="d-block w-100" src="https://shuju1-123.oss-cn-beijing.aliyuncs.com/heimadai/data/new_Lunbo/2018-09/06/20180906065440_37431.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
