--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>财富</title>
+    <title>黑马财富</title>
     <link rel="stylesheet" href="hm.css">   
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/css/bootstrap.min.css">  
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
@@ -78,16 +78,16 @@
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-              <div class="carousel-item active" >
-                <img class="d-block w-100" src="https://shuju1-123.oss-cn-beijing.aliyuncs.com/heimadai/data/new_Lunbo/2018-10/31/20181031100327_45007.jpg" alt="First slide">
+                <div class="carousel-item active" >
+                  <img class="d-block w-100" src="https://shuju1-123.oss-cn-beijing.aliyuncs.com/heimadai/data/new_Lunbo/2018-10/31/20181031100327_45007.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="https://shuju1-123.oss-cn-beijing.aliyuncs.com/heimadai/data/new_Lunbo/2018-11/01/20181101025954_68413.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="https://shuju1-123.oss-cn-beijing.aliyuncs.com/heimadai/data/new_Lunbo/2018-09/06/20180906065440_37431.jpg" alt="Third slide">
+                </div>
               </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="https://shuju1-123.oss-cn-beijing.aliyuncs.com/heimadai/data/new_Lunbo/2018-11/01/20181101025954_68413.jpg" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="https://shuju1-123.oss-cn-beijing.aliyuncs.com/heimadai/data/new_Lunbo/2018-09/06/20180906065440_37431.jpg" alt="Third slide">
-              </div>
-            </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
