--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
             </div>
             <!-- tab pans -->
             <div class="tab-content">
-                <div role="tabpanel" class="tab-pane active" id="product_tab_01">
-                    <div class="col-xs-12 col-sm-6 col-md-4">
+                <div role="tabpanel" class="tab-pane active new" id="product_tab_01" >
+                    <div class="col-xs-12 col-sm-6 col-md-4 float-left">
                         <a href="#" class="product_box active">
                             <div class="product_box_right">
                                 <p>
@@ -265,7 +265,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="col-xs-12 col-sm-6 col-md-4 float-left">
                         <a href="#" class="product_box">
                             <div class="product_box_right">
                                 <div class="toolTip_box">
@@ -301,7 +301,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="col-xs-12 col-sm-6 col-md-4 float-left">
                         <a href="#" class="product_box active">
                             <div class="product_box_right">
                                 <p>
@@ -330,7 +330,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="col-xs-12 col-sm-6 col-md-4 float-left">
                         <a href="#" class="product_box active">
                             <div class="product_box_right">
                                 <p>
